# PL-TEC-PLPipes

./: .gitignore  404.html  CHANGELOG.md  README.md  TODO.md  actions.md~  azure.md~  cloud_fss_interface_design.txt  configuration.md~  databases.md~  faq.md~  google-cloud.md~  google.md~  index.html  install.md~  intro.md~  jupyter.md~  logging.md~  msgraph.md~  objects.inv  openai.md~  overview.md~  project-setup.md~  pyproject.toml  runner.md~  spark.md~
actions/: index.html
aws/: index.html
azure/: index.html
cloud-intro/: index.html
config/: common.yaml
configuration/: index.html
databases/: index.html
docs/: install.md  license.md
example/actions/: bar.table.sql  bar_update.sql  foo.py
extra/: dbeaver-cli.md
faq/: index.html
google-cloud/: index.html
install/: index.html
intro/: index.html
jupyter/: index.html
lib/plpipes/: __init__.py  action.py  config.py  database.py  init.py  runner.py
lib/plpipes/action/: __init__.py  base.py  (+2 more)
license/: index.html
logging/: index.html
msgraph/: index.html
nomenclature/: index.html
openai/: index.html
other-network/: index.html
overview/: index.html
project-setup/: index.html
reference/plpipes/: index.html
reference/summary/: index.html
runner/: index.html
search/: search_index.json
spark/: index.html
src/plpipes/: __init__.py  autoaction.py  config.py  database.py  exceptions.py  filesystem.py  init.py  jupyter.py  plugin.py  runner.py  spark.py
tests/: test_action.py  test_config.py  test_config1.py  test_db_queries.py  test_sql_script.sql  test_storage.py  tests.sql
(+200 files in other folders)
