[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "plpipes"
authors = [{name = "PredictLand", email = "info@predictland.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.01"
description = "PredictLand Data Science Framwork"

[project.urls]
Home = "https://github.com/PredictLand/PL-TEC-PLPipes"
